# FRI-Client-SDK_Cpp

./: .gitignore  CMakeLists.txt  README.md  fri_config.h.in
FRI-Client-SDK_Cpp/doc/html/: FRI__Descr_8dox.html  annotated.html  classKUKA_1_1FRI_1_1ClientApplication-members.html  classKUKA_1_1FRI_1_1ClientApplication.html  classKUKA_1_1FRI_1_1FRIException-members.html  classKUKA_1_1FRI_1_1FRIException.html  classKUKA_1_1FRI_1_1IClient-members.html  classKUKA_1_1FRI_1_1IClient.html  classKUKA_1_1FRI_1_1IConnection-members.html  classKUKA_1_1FRI_1_1IConnection.html  classKUKA_1_1FRI_1_1LBRClient-members.html  classKUKA_1_1FRI_1_1LBRClient.html  classKUKA_1_1FRI_1_1LBRCommand-members.html  classKUKA_1_1FRI_1_1LBRCommand.html  classKUKA_1_1FRI_1_1LBRState-members.html  classKUKA_1_1FRI_1_1LBRState.html  classKUKA_1_1FRI_1_1TransformationClient-members.html  classKUKA_1_1FRI_1_1TransformationClient.html  classKUKA_1_1FRI_1_1UdpConnection-members.html  classKUKA_1_1FRI_1_1UdpConnection.html  classes.html  files.html  friClientApplication_8h.html  friClientApplication_8h_source.html  friClientIf_8h.html  friClientIf_8h_source.html  friConnectionIf_8h.html  friConnectionIf_8h_source.html  friException_8h.html  friException_8h_source.html  friLBRClient_8h.html  friLBRClient_8h_source.html  friLBRCommand_8h.html  friLBRCommand_8h_source.html  friLBRState_8h.html  friLBRState_8h_source.html  friTransformationClient_8h.html  friTransformationClient_8h_source.html  friUdpConnection_8h.html  friUdpConnection_8h_source.html  (+15 more)
FRI-Client-SDK_Cpp/example/IOAccess/: IOAccessApp.cpp  IOAccessClient.cpp  IOAccessClient.h  Makefile
FRI-Client-SDK_Cpp/example/LBRClientTemplate/: MyLBRApp.cpp  MyLBRClient.cpp  MyLBRClient.h
FRI-Client-SDK_Cpp/example/LBRJointSineOverlay/: LBRJointSineOverlayApp.cpp  LBRJointSineOverlayClient.cpp  LBRJointSineOverlayClient.h  Makefile
FRI-Client-SDK_Cpp/example/LBRTorqueSineOverlay/: LBRTorqueSineOverlayApp.cpp  LBRTorqueSineOverlayClient.cpp  LBRTorqueSineOverlayClient.h  Makefile
FRI-Client-SDK_Cpp/example/LBRWrenchSineOverlay/: LBRWrenchSineOverlayApp.cpp  LBRWrenchSineOverlayClient.cpp  LBRWrenchSineOverlayClient.h  Makefile
FRI-Client-SDK_Cpp/example/SimulatedTransformationProvider/: Makefile  SimulatedTransformationProviderApp.cpp  SimulatedTransformationProviderClient.cpp  SimulatedTransformationProviderClient.h
FRI-Client-SDK_Cpp/example/TransformationProvider/: Makefile  TransformationProviderApp.cpp  TransformationProviderClient.cpp  TransformationProviderClient.h
FRI-Client-SDK_Cpp/include/: friClientApplication.h  friClientIf.h  friConnectionIf.h  friException.h  friLBRClient.h  friLBRCommand.h  friLBRState.h  friTransformationClient.h  friUdpConnection.h
FRI-Client-SDK_Cpp/src/base/: friClientApplication.cpp  friClientData.h
FRI-Client-SDK_Cpp/src/client_lbr/: friLBRClient.cpp  friLBRCommand.cpp  friLBRState.cpp
FRI-Client-SDK_Cpp/src/client_trafo/: friTransformationClient.cpp
FRI-Client-SDK_Cpp/src/connection/: friUdpConnection.cpp
FRI-Client-SDK_Cpp/src/protobuf/: friCommandMessageEncoder.cpp  friCommandMessageEncoder.h  friMonitoringMessageDecoder.cpp  friMonitoringMessageDecoder.h  pb_frimessages_callbacks.c  pb_frimessages_callbacks.h
example/IOAccess/: IOAccessApp.cpp
example/LBRClientTemplate/: Makefile  MyLBRApp.cpp  MyLBRClient.h
example/LBRTorqueSineOverlay/: LBRTorqueSineOverlayApp.cpp  LBRTorqueSineOverlayClient.cpp  LBRTorqueSineOverlayClient.h
example/LBRWrenchSineOverlay/: LBRWrenchSineOverlayClient.cpp  LBRWrenchSineOverlayClient.h
example/SimulatedTransformationProvider/: SimulatedData.inc  SimulatedTransformationProviderClient.cpp
example/TransformationProvider/: Makefile
